# GOMOKU

./: CMakeLists.txt  Makefile  README.md
include/: Brain.hpp  Game.hpp  GomokuIA.hpp  IGame.hpp  Protocol.hpp  pisqpipe.h
src/: Brain.cpp  Protocol.cpp  example.cpp  main.cpp  pisqpipe.cpp
